# QuizApp

./: .gitignore  CMakeLists.txt  CMakePresets.json  premake5.lua
QuizApp/: CMakeLists.txt  QuizApp.vcxproj.filters  imgui.ini  premake5.lua
QuizApp/QuizApp.dir/Debug/: QuizApp.exe.recipe
QuizApp/QuizApp.dir/Debug/QuizApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  QuizApp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
QuizApp/QuizApp.dir/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
QuizApp/src/: CardTypes.h  CsvHandler.h  FileSelector.cpp  FileSelector.h  FilesHandler.h  Game.cpp  Game.h  GameInterface.cpp  GameInterface.h  GuiWindow.cpp  GuiWindow.h  Main.cpp  Quiz.cpp  Quiz.h  QuizApp.cpp  QuizApp.h  QuizUtils.h  Renderer.cpp  Renderer.h  SharedResources.h  Shuffles.h  UserInterface.cpp  UserInterface.h
quizzes/: english.csv  niemiecki_cos.csv  niemiecki_slowka.csv  part.csv  temp.csv  test.csv
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
